2005-04-07  Jaap A. Haitsma  <jaap@haitsma.org>

	* user-group-xml.c: plugged some leaks. Fixes #172158

2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-02-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* user-group-xml.c, user-settings.[ch]: manage somewhat elegantly the 
	"other data" field in the GECOS fields. Fixes #161082

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-01-31  Carlos Garnacho Parro  <carlosg@gnome.org>

	* passwd.c: detect whether to use md5 from the backend. Closes
	#161269. Fixed a couple of leaks

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.90

2005-01-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* group-settings.c, profile-settings.c, user-settings.c, user_group.c:
	use new GtkMessageDialog API for HIG dialogs

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4.1

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c, privileges-table.[ch], user-settings.c: removed
	redundant or duplicated code, fixed groups in profiles stuff

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4

2004-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c, privileges-table.[ch], profile-settings.c, table.c,
	user-settings.c: Patch from Sivan Greenberg <sivan@workaround.org>
	to add privileges to profiles, so users can have default groups

2004-12-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.3

2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* privileges-table.[ch], user-settings.c: made it to preserve 
	"unknown" groups
	* user-group-xml.[ch]: readded user_get_groups

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* privileges-table.[ch]: added, it's the table which contains the
	user privileges