@@ -1,3 +1,8 @@
+2005-04-13  Jaap A. Haitsma  <jaap@haitsma.org>
+
+	* users-table.[ch]: Remove unnecessary commas when displaying users'
+	data. Fixes #171868. fix some coding style
+
 2005-04-07  Jaap A. Haitsma  <jaap@haitsma.org>
 
 	* user-group-xml.c: plugged some leaks. Fixes #172158
